// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | PageWrapper PageWrapper 1`] = `
.c1 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  box-sizing: border-box;
  margin: 0 auto;
}

@media (min-width:768px) {
  .c0 {
    max-width: 768px;
    padding: 0 24px;
  }
}

@media (min-width:992px) {
  .c0 {
    max-width: 992px;
    padding: 0 28px;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 1440px;
    padding: 0 96px;
  }
}

@media (min-width:1680px) {
  .c0 {
    max-width: 1680px;
    padding: 0 60px;
  }
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        Page contents inside the PageWrapper can be anything.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | PageWrapper PageWrapper with a custom background 1`] = `
.c2 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  background-color: #F5F5F5;
}

.c1 {
  box-sizing: border-box;
  margin: 0 auto;
}

@media (min-width:768px) {
  .c1 {
    max-width: 768px;
    padding: 0 24px;
  }
}

@media (min-width:992px) {
  .c1 {
    max-width: 992px;
    padding: 0 28px;
  }
}

@media (min-width:1440px) {
  .c1 {
    max-width: 1440px;
    padding: 0 96px;
  }
}

@media (min-width:1680px) {
  .c1 {
    max-width: 1680px;
    padding: 0 60px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Page contents inside the PageWrapper can be anything.
      </span>
    </div>
  </div>
</div>
`;
